# genetic-sudoku

./: .gitignore  CMakeLists.txt  README.md
include/genetic-sudoku/: Individual.h  Population.h  utils.h
src/: CMakeLists.txt  main.cpp
